[gd_scene load_steps=34 format=2]

[ext_resource path="res://Skills/Clock.gd" type="Script" id=1]
[ext_resource path="res://Skills/Clock/1_4.png" type="Texture" id=2]
[ext_resource path="res://Skills/Clock/1_0.png" type="Texture" id=3]
[ext_resource path="res://Skills/Clock/1_1.png" type="Texture" id=4]
[ext_resource path="res://Skills/Clock/1_2.png" type="Texture" id=5]
[ext_resource path="res://Skills/Clock/1_3.png" type="Texture" id=6]
[ext_resource path="res://Skills/Clock/1_24.png" type="Texture" id=7]
[ext_resource path="res://Skills/Clock/1_8.png" type="Texture" id=8]
[ext_resource path="res://Skills/Clock/1_22.png" type="Texture" id=9]
[ext_resource path="res://Skills/Clock/1_25.png" type="Texture" id=10]
[ext_resource path="res://Skills/Clock/1_13.png" type="Texture" id=11]
[ext_resource path="res://Skills/Clock/1_29.png" type="Texture" id=12]
[ext_resource path="res://Skills/Clock/1_26.png" type="Texture" id=13]
[ext_resource path="res://Skills/Clock/1_16.png" type="Texture" id=14]
[ext_resource path="res://Skills/Clock/1_12.png" type="Texture" id=15]
[ext_resource path="res://Skills/Clock/1_17.png" type="Texture" id=16]
[ext_resource path="res://Skills/Clock/1_18.png" type="Texture" id=17]
[ext_resource path="res://Skills/Clock/1_28.png" type="Texture" id=18]
[ext_resource path="res://Skills/Clock/1_6.png" type="Texture" id=19]
[ext_resource path="res://Skills/Clock/1_7.png" type="Texture" id=20]
[ext_resource path="res://Skills/Clock/1_10.png" type="Texture" id=21]
[ext_resource path="res://Skills/Clock/1_11.png" type="Texture" id=22]
[ext_resource path="res://Skills/Clock/1_20.png" type="Texture" id=23]
[ext_resource path="res://Skills/Clock/1_5.png" type="Texture" id=24]
[ext_resource path="res://Skills/Clock/1_23.png" type="Texture" id=25]
[ext_resource path="res://Skills/Clock/1_21.png" type="Texture" id=26]
[ext_resource path="res://Skills/Clock/1_19.png" type="Texture" id=27]
[ext_resource path="res://Skills/Clock/1_27.png" type="Texture" id=28]
[ext_resource path="res://Skills/Clock/1_9.png" type="Texture" id=29]
[ext_resource path="res://Skills/Clock/1_15.png" type="Texture" id=30]
[ext_resource path="res://Skills/Clock/1_14.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 8 ), ExtResource( 29 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 9 ), ExtResource( 25 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 28 ), ExtResource( 18 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 13 )

[node name="Clock" type="Node2D"]
rotation = 4.71239
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 51, -3 )
scale = Vector2( 2, 1.5 )
frames = SubResource( 1 )
frame = 24
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( 1, 2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ClockTurningTimer" type="Timer" parent="."]

[connection signal="area_entered" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ClockTurningTimer" to="." method="_on_ClockTurningTimer_timeout"]
